# fdrop

./: .editorconfig  bun.lockb  package.json  tailwind.config.js
src/: style.css
src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
src-tauri/capabilities/: default.json  popup.json  respond-link-request.json
src-tauri/fdrop-common/: Cargo.toml
src-tauri/fdrop-common/src/: lib.rs
src-tauri/fdrop-config/: Cargo.toml
src-tauri/fdrop-config/src/: lib.rs
src-tauri/fdrop-discovery/: Cargo.toml
src-tauri/fdrop-discovery/examples/: create_peer.rs
src-tauri/fdrop-discovery/src/: lib.rs
src-tauri/fdrop-net/: Cargo.toml  build.rs
src-tauri/fdrop-net/examples/: create_peer.rs
src-tauri/fdrop-net/src/: definitions.proto  definitions.rs  errors.rs  lib.rs  protocol.rs  transfer.rs
src-tauri/src/: lib.rs  main.rs
src/components/: DeviceLink.svelte  Send.svelte  Stepper.svelte
src/components/welcome/: Buttons.svelte  InitialSetup.svelte  KeyGeneration.svelte  LinkDevice.svelte
src/lib/: networking.svelte.ts  utils.ts  welcome.ts
src/lib/components/: DeviceLink.svelte  Stepper.svelte
src/lib/icons/: Circle.svelte  Linux.svelte  Macos.svelte  Windows.svelte  link.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  Chat.svelte  DeviceList.svelte  TransferDisplay.svelte
src/routes/confirm-link-request/: +page.svelte
src/routes/link-device/: +page.svelte
src/routes/rejected-link-request/: +page.svelte
src/routes/welcome/: +page.svelte  Buttons.svelte  Done.svelte  InitialSetup.svelte  KeyGeneration.svelte  LinkDevice.svelte
