[workspace]
members = ["fdrop-common", "fdrop-config", "fdrop-discovery"]

[workspace.package]
version = "0.1.0"

[package]
name = "fdrop"
version = { workspace = true }
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tauri-plugin-process = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tracing-subscriber = { version = "0.3" }
tauri.workspace = true
fdrop-config.workspace = true
fdrop-common.workspace = true
fdrop-discovery.workspace = true

[workspace.dependencies]
fdrop-common = { path = "fdrop-common" }
fdrop-config = { path = "fdrop-config" }
fdrop-discovery = { path = "fdrop-discovery" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
thiserror = "1.0.58"
serde_json = "1"
tracing = { version = "0.1.40", features = ["async-await"] }
