[workspace]
members = ["fdrop-common", "fdrop-config", "fdrop-net"]

[workspace.package]
version = "0.1.0"

[package]
name = "fdrop"
version = { workspace = true }
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
fdrop-config.workspace = true
fdrop-common.workspace = true
fdrop-net.workspace = true
tauri-plugin-shell = "2"
tauri-plugin-process = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dependencies]
fdrop-common = { path = "fdrop-common" }
fdrop-config = { path = "fdrop-config" }
fdrop-net = { path = "fdrop-net" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tracing"] }
thiserror = "1.0.58"
serde_json = "1"
tracing = { version = "0.1", features = ["async-await", "attributes"] }
whoami = "1.5.2"
