[package]
name = "fdrop-config"
version = { workspace = true }
edition = "2021"

[dependencies]
serde_json.workspace = true
whoami = "1.5.1"
local-ip-address = "0.6.1"
tauri = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
fdrop-common = { workspace = true }
libp2p-identity = { version = "0.2.10", features = ["ed25519", "rand"] }
