[package]
name = "fdrop-net"
version = { workspace = true }
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "mdns",
    "ed25519",
] }
tauri.workspace = true
fdrop-common.workspace = true
fdrop-config.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1.38.0", features = ["macros"] }
mdns-sd = "0.12.0"
whoami.workspace = true
socket2 = "0.5.8"
prost = "0.13.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3" }

[build-dependencies]
prost-build = "0.13.3"
